--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,21 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+
+# 
+.vscode
+data
+output/
+**/__pycache__
+
+# 
+.idea
+
+# 
+.DS_Store
+
+# 
+conf/config.yaml
+
+
