--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ pydantic_core==2.27.2
 pydub==0.25.1
 PyJWT==2.10.1
 PyMuPDF==1.25.3
+PyPDF2==3.0.1
 PyQt6==6.8.1
 PyQt6-Qt6==6.8.2
 PyQt6_sip==13.10.0
